# QALLM

./: .gitignore  aya.py  eval.py  install_dependencies.sh  pyproject.toml  run_parallel.sh  train.py
configs/: dpo_trainer.json  gen.json  peft.json  sft_trainer.json
trainers/: configs.py  dpo.py  sft.py
utils/: aya.py  common.py  datasets.py  hf.py  instructions.py  metrics.py  model.py  text.py
