[project]
name = "qallm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "gdown>=6.0.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "torch>=2.12.0",
    "transformers>=5.8.1",
    "wandb>=0.27.0",
]
