[project]
name = "qallm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "gdown>=6.0.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "rouge-score>=0.1.2",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.13.0",
    "wandb>=0.27.0",
]
